// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreModal component Snapshot When "isLoading" is "true" matches 1`] = `
<storebasemodal-stub
  isloading="true"
  logopath=""
  name=""
>
  <div>
    <span
      class="title"
    >
       é uma loja confiável!
    </span>
     
    <span
      class="subTitle"
    >
      
      O CR faz uma análise rigorosa para exibir somente lojas confiáveis.
    
    </span>
     
    <div
      class="wrapperTitleCta"
    >
      <baseicon-stub
        class="truckIcon"
        id="truck.icon.svg"
      />
       
      <span
        class="info"
      >
        <strong>
          Economize no frete
        </strong>
         adicionando produtos da mesma loja
      
      </span>
    </div>
     
    <basebutton-stub
      class="baseButton"
      path=""
      size="medium"
      type="success"
    >
      
      Ver mais produtos da loja
    
    </basebutton-stub>
     
    <div />
  </div>
   
</storebasemodal-stub>
`;

exports[`StoreModal component Snapshot When has "name", "logoPath" and "informations" matches 1`] = `
<storebasemodal-stub
  logopath="/logo/path"
  name="Name"
>
  <div>
    <span
      class="title"
    >
      Name é uma loja confiável!
    </span>
     
    <span
      class="subTitle"
    >
      
      O CR faz uma análise rigorosa para exibir somente lojas confiáveis.
    
    </span>
     
    <div
      class="wrapperTitleCta"
    >
      <baseicon-stub
        class="truckIcon"
        id="truck.icon.svg"
      />
       
      <span
        class="info"
      >
        <strong>
          Economize no frete
        </strong>
         adicionando produtos da mesma loja
      
      </span>
    </div>
     
    <basebutton-stub
      class="baseButton"
      path=""
      size="medium"
      type="success"
    >
      
      Ver mais produtos da loja
    
    </basebutton-stub>
     
    <div>
      <div
        class="field"
      >
        <div>
          <span
            class="fieldTitle"
          >
            Panvel Farmácias
          </span>
           
          <div
            class="fieldContent"
          >
            Dimed S/A Distribuidora de Medicamentos
            <br />
            CNPJ 92.665.611/0001-77
            <br />
            AFE: 7.17094.5 
            <br />
            CMVS - 355030801-477-002443-1-7
          </div>
        </div>
      </div>
      <div
        class="field"
      >
        <div>
          <span
            class="fieldTitle"
          >
            Farmacêutico responsável
          </span>
           
          <div
            class="fieldContent"
          >
            Ely Fernandes Lima
            <br />
            CRF/PR: 15448
          </div>
        </div>
      </div>
      <div
        class="field"
      >
        <div>
          <span
            class="fieldTitle"
          >
            Horário de funcionamento
          </span>
           
          <div
            class="fieldContent"
          >
            Segunda a Sexta 
            <br />
            8h00 às 20h30
            <br />
            Av. Industrial Belgraf, 865 Eldorado do Sul, Rio Grande do Sul
          </div>
        </div>
      </div>
      <div
        class="field"
      >
        <div>
          <span
            class="fieldTitle"
          >
            Atendimento
          </span>
           
          <div
            class="fieldContent"
          >
            (51) 3481-9500
            <br />
            sac@grupodimed.com.br
          </div>
        </div>
      </div>
    </div>
  </div>
   
</storebasemodal-stub>
`;
